--- a/social.html
+++ b/social.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/section-style.css" />
     <link rel="stylesheet" href="styles/subscribe-dialog.css" />
     <link rel="stylesheet" href="styles/about-style.css" />
+    <link rel="stylesheet" href="styles/social-style.css" />
   </head>
   <body>
     <header>
