add page indication

--- a/about.html
+++ b/about.html
@@ -17,14 +17,15 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-        <img width="30" alt="logo" src="images/logo-olive-green.png" />
-        <h1 class="f title">Bloom Valley Nursery</h1>
-      </div>
+      <a href="index.html"
+        ><div id="logo">
+          <img width="30" alt="logo" src="images/logo-olive-green.png" />
+          <h1 class="f title">Bloom Valley Nursery</h1>
+        </div></a>
       <nav>
         <ul class="f title">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" class="current">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="social.html">Social</a></li>
         </ul>
