--- a/social.html
+++ b/social.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <title>Bloom Valley Nursery</title>
+    <title>Social - Bloom Valley Nursery</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/font-style.css" />
     <link rel="stylesheet" href="styles/header-style.css" />
@@ -18,16 +18,18 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-        <img width="30" alt="logo" src="images/logo-olive-green.png" />
-        <h1 class="f title">Bloom Valley Nursery</h1>
-      </div>
+      <a href="index.html"
+        ><div id="logo">
+          <img width="30" alt="logo" src="images/logo-olive-green.png" />
+          <h1 class="f title">Bloom Valley Nursery</h1>
+        </div></a
+      >
       <nav>
         <ul class="f title">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="social.html">Social</a></li>
+          <li><a href="social.html" class="current">Social</a></li>
         </ul>
       </nav>
     </header>
