--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bloom Valley Nursery Gallery</title>
+    <title>Gallery - Bloom Valley Nursery</title>
 
     <meta
       name="viewport"
@@ -20,15 +20,16 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-        <img width="30" alt="logo" src="images/logo-olive-green.png" />
-        <h1 class="f title">Bloom Valley Nursery</h1>
-      </div>
+      <a href="index.html"
+        ><div id="logo">
+          <img width="30" alt="logo" src="images/logo-olive-green.png" />
+          <h1 class="f title">Bloom Valley Nursery</h1>
+        </div></a>
       <nav>
         <ul class="f title">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="gallery.html" class="current">Gallery</a></li>
           <li><a href="social.html">Social</a></li>
         </ul>
       </nav>
