--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <nav>
         <ul class="f title">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="current">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="social.html">Social</a></li>
